[package]
name = "fed"
version = "0.3.0"
authors = ["Scott Steele <scottlsteele@gmail.com>"]

homepage = "https://github.com/scooter-dangle/fed-rs"
repository = "https://github.com/scooter-dangle/fed-rs"
description = "A sketch implementation of anonymous, tagged unions in stable Rust"
documentation = "https://docs.rs/fed/0.2.2/fed"

license = "Apache-2.0"

[dependencies]
