[package]
name = "fed"
version = "0.4.1"
authors = ["Scott Steele <scottlsteele@gmail.com>"]

homepage = "https://github.com/scooter-dangle/fed-rs"
repository = "https://github.com/scooter-dangle/fed-rs"
description = "A sketch implementation of anonymous, tagged unions in stable Rust"
documentation = "https://docs.rs/fed"

license = "Apache-2.0"

[dependencies]

[dev_dependencies]
serde = "1.0.11"
serde_derive = "1.0.11"
bincode = "0.8.0"
